force-app/main/default/objects/Credit_Application_Form__c/Credit_Application_Form__c.object-meta.xml
<CustomObject>
    <label>Credit Application Form</label>
    <nameField>
        <displayFormat>Credit Form-{000}</displayFormat>
        <label>Credit Application Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Applications Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>