force-app/main/default/objects/Credit_Application_Form__c/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>