force-app/main/default/objects/Credit_Application_Form__c/fields/Any__c.field-meta.xml
<CustomField>
    <fullName>Any__c</fullName>
    <inlineHelpText>Does the applicant or any principal partner officer or proprietor have a material claim, suit, judgement or tax claim pending against him/her?</inlineHelpText>
    <label>Any Material Claim pending</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>