force-app/main/default/objects/Credit_Application_Form__c/fields/Application_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Applications_Form</relationshipName>
    <type>Lookup</type>
</CustomField>