force-app/main/default/objects/Credit_Application_Form__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Submit For Approval</fullName>
            </value>
            <value>
                <fullName>Sent To Customer</fullName>
            </value>
            <value>
                <fullName>Opened By Customer</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Client Not Interested</fullName>
            </value>
            <value>
                <fullName>Assigned AR Specialist</fullName>
            </value>
            <value>
                <fullName>AR Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>