force-app/main/default/objects/Credit_Application_Form__c/fields/Are_Accounts_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Are_Accounts_Receivable__c</fullName>
    <inlineHelpText>Are Accounts Receivables currently Pledged?</inlineHelpText>
    <label>Are Accounts Receivable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>