force-app/main/default/objects/Credit_Application_Form__c/fields/Balance_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Balance_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Sheet</label>
    <type>Checkbox</type>
</CustomField>