force-app/main/default/objects/Credit_Application_Form__c/fields/Bank_E_mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_E_mail_Address__c</fullName>
    <label>E -mail Address</label>
    <type>Email</type>
</CustomField>