force-app/main/default/objects/Credit_Application_Form__c/fields/Bank_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fax_Number__c</fullName>
    <label>Fax Number</label>
    <type>Phone</type>
</CustomField>