force-app/main/default/objects/Credit_Application_Form__c/fields/Bank_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <type>Phone</type>
</CustomField>