force-app/main/default/objects/Credit_Application_Form__c/fields/Billing_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line1__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>