force-app/main/default/objects/Credit_Application_Form__c/fields/BRANCH__c.field-meta.xml
<CustomField>
    <fullName>BRANCH__c</fullName>
    <label>BRANCH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>