force-app/main/default/objects/Credit_Application_Form__c/fields/Business_Information__c.field-meta.xml
<CustomField>
    <fullName>Business_Information__c</fullName>
    <label>Business Information (Pls check one)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>