force-app/main/default/objects/Credit_Application_Form__c/fields/Business_Location_is_Please_Select__c.field-meta.xml
<CustomField>
    <fullName>Business_Location_is_Please_Select__c</fullName>
    <label>Business Location is: Please Select</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>