force-app/main/default/objects/Credit_Application_Form__c/fields/CaseSafe_Credit_App_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Credit_App_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Credit App ID</label>
    <type>Text</type>
</CustomField>