force-app/main/default/objects/Credit_Application_Form__c/fields/CFO_Comments__c.field-meta.xml
<CustomField>
    <fullName>CFO_Comments__c</fullName>
    <label>CFO Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>