force-app/main/default/objects/Credit_Application_Form__c/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>0054X00000EeFkAQAV</value>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>0054X00000EdvPCQAZ</value>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <value>0054X00000EduZfQAJ</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Applications_Form1</relationshipName>
    <type>Lookup</type>
</CustomField>