force-app/main/default/objects/Credit_Application_Form__c/fields/Company_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Company_Telephone__c</fullName>
    <label>Company Telephone</label>
    <type>Phone</type>
</CustomField>