force-app/main/default/objects/Credit_Application_Form__c/fields/Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>Completed_Step__c</fullName>
    <label>Completed Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>