force-app/main/default/objects/Credit_Application_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Applications Form</relationshipLabel>
    <relationshipName>Credit_Applications_Form</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>