force-app/main/default/objects/Credit_Application_Form__c/fields/Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Number__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <label>Contact Mobile Number</label>
    <type>Text</type>
</CustomField>