force-app/main/default/objects/Credit_Application_Form__c/fields/Contact_Name_For_Credit__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_For_Credit__c</fullName>
    <formula>(Contact__r.FirstName) +&quot; &quot;+ (Contact__r.Middle_Name__c) +&quot; &quot;+  (Contact__r.LastName)</formula>
    <label>Contact Name For Credit</label>
    <type>Text</type>
</CustomField>