force-app/main/default/objects/Credit_Application_Form__c/fields/Controller_Comments__c.field-meta.xml
<CustomField>
    <fullName>Controller_Comments__c</fullName>
    <label>Controller Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>