force-app/main/default/objects/Credit_Application_Form__c/fields/Copy_of_exemption_certificate__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_exemption_certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of exemption certificate</label>
    <type>Checkbox</type>
</CustomField>