force-app/main/default/objects/Credit_Application_Form__c/fields/Credit_manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credit_manager_Comments__c</fullName>
    <label>Credit manager Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>