force-app/main/default/objects/Credit_Application_Form__c/fields/CUSTOMER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_TYPE__c</fullName>
    <label>CUSTOMER TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>