force-app/main/default/objects/Credit_Application_Form__c/fields/Date_Business_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Date_Business_Commenced__c</fullName>
    <label>Date Business Commenced</label>
    <type>Date</type>
</CustomField>