force-app/main/default/objects/Credit_Application_Form__c/fields/DBA_or_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_or_Trade_Name__c</fullName>
    <label>DBA or Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>