force-app/main/default/objects/Credit_Application_Form__c/fields/Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge__c</fullName>
    <label>Delivery Charge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>