force-app/main/default/objects/Credit_Application_Form__c/fields/Describe__c.field-meta.xml
<CustomField>
    <fullName>Describe__c</fullName>
    <label>Describe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>