force-app/main/default/objects/Credit_Application_Form__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>We are sending the alert email to customer when application is not submitted.</description>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>