force-app/main/default/objects/Credit_Application_Form__c/fields/Financials__c.field-meta.xml
<CustomField>
    <fullName>Financials__c</fullName>
    <label>Financials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Year Audited or Reviewed Financials - If Available</fullName>
            </value>
            <value>
                <fullName>Prior Year Tax Returns - do not need to attach schedules</fullName>
            </value>
            <value>
                <fullName>Internal Balance Sheet and Income Statement</fullName>
            </value>
            <value>
                <fullName>Bank Statements for Primary Operating Acccount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>