force-app/main/default/objects/Credit_Application_Form__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <formula>HYPERLINK($Label.Credit_Application_Form_URL + &apos;?contactid=&apos;+ Contact__c, &apos;Form URL&apos; ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form URL</label>
    <type>Text</type>
</CustomField>