force-app/main/default/objects/Credit_Application_Form__c/fields/Guarantor_City__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>