force-app/main/default/objects/Credit_Application_Form__c/fields/Guarantor_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Home_Address__c</fullName>
    <label>Home Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>