force-app/main/default/objects/Credit_Application_Form__c/fields/Guarantor_Home_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Home_Phone_Number__c</fullName>
    <label>Home Phone Number</label>
    <type>Phone</type>
</CustomField>