force-app/main/default/objects/Credit_Application_Form__c/fields/Guarantor_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Name__c</fullName>
    <label>Guarantor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>