force-app/main/default/objects/Credit_Application_Form__c/fields/Guarantor_Position__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Position__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>