force-app/main/default/objects/Credit_Application_Form__c/fields/guarantor_State__c.field-meta.xml
<CustomField>
    <fullName>guarantor_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatesName</valueSetName>
    </valueSet>
</CustomField>