force-app/main/default/objects/Credit_Application_Form__c/fields/Guarantor_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>