force-app/main/default/objects/Credit_Application_Form__c/fields/Has_Application__c.field-meta.xml
<CustomField>
    <fullName>Has_Application__c</fullName>
    <inlineHelpText>Has Applicant or any Principal Partner,Officer, proprietor filed for Bankruptcy in past 10 Years?</inlineHelpText>
    <label>Has Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>