force-app/main/default/objects/Credit_Application_Form__c/fields/In_consideration_of_the_Extension_to__c.field-meta.xml
<CustomField>
    <fullName>In_consideration_of_the_Extension_to__c</fullName>
    <label>In consideration of the Extension to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>