force-app/main/default/objects/Credit_Application_Form__c/fields/Income_Document__c.field-meta.xml
<CustomField>
    <fullName>Income_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Document</label>
    <type>Checkbox</type>
</CustomField>