force-app/main/default/objects/Credit_Application_Form__c/fields/Income_Statement__c.field-meta.xml
<CustomField>
    <fullName>Income_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Statement</label>
    <type>Checkbox</type>
</CustomField>