force-app/main/default/objects/Credit_Application_Form__c/fields/Indicate_reason_for_exemption__c.field-meta.xml
<CustomField>
    <fullName>Indicate_reason_for_exemption__c</fullName>
    <label>Indicate reason for exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>