force-app/main/default/objects/Credit_Application_Form__c/fields/Most_Recent_Years_Tax_Returns__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Years_Tax_Returns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent Years Tax Returns</label>
    <type>Checkbox</type>
</CustomField>