force-app/main/default/objects/Credit_Application_Form__c/fields/Name_of_Authorized_Officer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Authorized_Officer__c</fullName>
    <label>Name of Authorized Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>