force-app/main/default/objects/Credit_Application_Form__c/fields/Other_Describe__c.field-meta.xml
<CustomField>
    <fullName>Other_Describe__c</fullName>
    <label>Other Describe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>