force-app/main/default/objects/Credit_Application_Form__c/fields/Other_Document__c.field-meta.xml
<CustomField>
    <fullName>Other_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Document</label>
    <type>Checkbox</type>
</CustomField>