force-app/main/default/objects/Credit_Application_Form__c/fields/Pledge_accounts_receivable__c.field-meta.xml
<CustomField>
    <fullName>Pledge_accounts_receivable__c</fullName>
    <inlineHelpText>Do you pledge accounts receivable or inventory as a security when you borrow?</inlineHelpText>
    <label>Pledge accounts receivable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>