force-app/main/default/objects/Credit_Application_Form__c/fields/Presently_registered__c.field-meta.xml
<CustomField>
    <fullName>Presently_registered__c</fullName>
    <inlineHelpText>Are there any liens presently registered against any company, inventory, property, or asset?</inlineHelpText>
    <label>Presently registered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>