force-app/main/default/objects/Credit_Application_Form__c/fields/Previous_Emp_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Emp_Business_Name__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>