force-app/main/default/objects/Credit_Application_Form__c/fields/Previous_Emp_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Emp_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>