force-app/main/default/objects/Credit_Application_Form__c/fields/PRICE_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRICE_CODE__c</fullName>
    <label>PRICE CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>