force-app/main/default/objects/Credit_Application_Form__c/fields/Primary_Account_Method_Of_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Method_Of_Invoice__c</fullName>
    <label>Preferred Method Of Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>