force-app/main/default/objects/Credit_Application_Form__c/fields/Primary_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>