force-app/main/default/objects/Credit_Application_Form__c/fields/Primary_Account_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>