force-app/main/default/objects/Credit_Application_Form__c/fields/Primary_Contact_Credit_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Credit_Limit_Requested__c</fullName>
    <label>Credit Limit Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>