force-app/main/default/objects/Credit_Application_Form__c/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>