force-app/main/default/objects/Credit_Application_Form__c/fields/Primary_Contact_Web_Add__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Web_Add__c</fullName>
    <label>Website Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>