force-app/main/default/objects/Credit_Application_Form__c/fields/Principal_Bank__c.field-meta.xml
<CustomField>
    <fullName>Principal_Bank__c</fullName>
    <label>Principal Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>