force-app/main/default/objects/Credit_Application_Form__c/fields/Recommended_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Credit_Limit__c</fullName>
    <label>Recommended Credit Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>