force-app/main/default/objects/Credit_Application_Form__c/fields/Sales_Tax_Exemption_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Exemption_Number__c</fullName>
    <label>Sales Tax Exemption Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>