force-app/main/default/objects/Credit_Application_Form__c/fields/SALESMAN__c.field-meta.xml
<CustomField>
    <fullName>SALESMAN__c</fullName>
    <label>SALESMAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>