force-app/main/default/objects/Credit_Application_Form__c/fields/SSNnumber__c.field-meta.xml
<CustomField>
    <fullName>SSNnumber__c</fullName>
    <label>SSNnumber</label>
    <length>15</length>
    <type>Text</type>
</CustomField>