force-app/main/default/objects/Credit_Application_Form__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>