force-app/main/default/objects/Credit_Application_Form__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>