force-app/main/default/objects/Credit_Application_Form__c/fields/Term_and_Conditions_of_Sales_App__c.field-meta.xml
<CustomField>
    <fullName>Term_and_Conditions_of_Sales_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term and Conditions of Sales Approved</label>
    <type>Checkbox</type>
</CustomField>