force-app/main/default/objects/Credit_Application_Form__c/fields/Terms_And_Condition_Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Condition_Accepted_By__c</fullName>
    <label>Accepted By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>