force-app/main/default/objects/Credit_Application_Form__c/fields/Terms_And_Condition_Firm__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Condition_Firm__c</fullName>
    <label>Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>