force-app/main/default/objects/Credit_Application_Form__c/fields/Title_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Title_Agreement__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>