force-app/main/default/objects/Credit_Application_Form__c/fields/Truck_Route__c.field-meta.xml
<CustomField>
    <fullName>Truck_Route__c</fullName>
    <label>Truck Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>