force-app/main/default/objects/Credit_Application_Form__c/fields/Type_of_Buisness__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Buisness__c</fullName>
    <label>Type of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>