force-app/main/default/objects/Credit_Application_Form__c/recordTypes/Application_Form.recordType-meta.xml
<RecordType>
    <fullName>Application_Form</fullName>
    <active>true</active>
    <label>Application Form</label>
</RecordType>