force-app/main/default/objects/Credit_Application_Form__c/recordTypes/Approved_Application_Form.recordType-meta.xml
<RecordType>
    <fullName>Approved_Application_Form</fullName>
    <active>true</active>
    <label>Approved Application Form</label>
</RecordType>