force-app/main/default/objects/Credit_Application_Form__c/validationRules/Credit_Ac_Num_Required_to_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Ac_Num_Required_to_Completed</fullName>
    <active>true</active>
    <description>To set Application Status as &quot;Completed&quot;,Credit Account Number is must And accept only numbers.</description>
    <errorConditionFormula>AND (ISNULL( Customer_Account_Number__c )  ||  NOT(ISNUMBER(Customer_Account_Number__c))   )
&amp;&amp; ISPICKVAL( Application_Status__c ,&quot;Completed&quot;)</errorConditionFormula>
    <errorMessage>Please Check Credit Account Number And Credit Account Number Should be Number</errorMessage>
</ValidationRule>