force-app/main/default/objects/Credit_Application_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Legal_Company_Name__c</columns>
    <columns>Name_of_Authorized_Officer__c</columns>
    <columns>Business_Information__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>