force-app/main/default/objects/Credit_Application_Form__c/listViews/Credit_Application_Form.listView-meta.xml
<ListView>
    <fullName>Credit_Application_Form</fullName>
    <columns>NAME</columns>
    <columns>Legal_Company_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Primary_Contact_Credit_Limit_Requested__c</columns>
    <columns>Recommended_Credit_Limit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Credit App Form</label>
</ListView>